set issues of spacing and pricing formate

--- a/src/modals/BookingDatesModal/BookingDatesModal.css
+++ b/src/modals/BookingDatesModal/BookingDatesModal.css
@@ -24,12 +24,12 @@
     width: 35%;
     height: auto;
     background-color: #FFFFFF;
-    border-radius: 10px;
+    border-radius: 5px;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
     align-items: start;
     justify-content: space-between;
-    padding: 20px 15px;
+    /* padding: 20px 15px; */
     transform: translateY(200%);
     transition: all 0.3s ease-in-out;
 }
@@ -46,20 +46,36 @@
     width: 100%;
     height: auto;
     gap: 15px;
+    padding: 15px 10px 0 10px;
 }
 
 .booking-date-modal-head {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    width: 100%;
+}
+
+.booking-date-modal-headings {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
 }
 
-.booking-date-modal-head > h3 {
-    font-size: 22px;
+.booking-date-modal-headings > h3 {
+    font-size: 15px;
     line-height: 1.2;
     font-weight: 500;
     color: #000;
+}
+
+.booking-modal-vehicle-name {
+    font-size: 15px;
+    line-height: 1.2;
+    font-weight: 600;
+    color: var(--primary-color);
 }
 
 .booking-modal-form-inputs{
@@ -110,7 +126,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: #F9F9F9;
     border: 1px solid #d7d7d7;
     padding: 5px 10px;
@@ -119,7 +135,7 @@
 }
 
 .booking-modal-pickup-dropdown-head > h3 {
-    font-size: 15px;
+    font-size: 13px;
     line-height: 1.2;
     font-weight: 500;
     color: #000;
@@ -139,14 +155,14 @@
     overflow: hidden;
     background-color: #F9F9F9;
     border: 1px solid transparent;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     z-index: 999999999;
     transition: all 0.3s ease-in-out;
 }
 
 .booking-modal-pickup-single-item {
-    font-size: 14px;
+    font-size: 13px;
     line-height: 1.2;
     font-weight: 500;
     color: var(--primary-color);
@@ -194,16 +210,16 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: #F9F9F9;
     border: 1px solid #d7d7d7;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 5px 10px;
     cursor: pointer;
 }
 
 .booking-modal-date-head > h3 {
-    font-size: 15px;
+    font-size: 13px;
     line-height: 1.2;
     font-weight: 500;
     color: #000;
@@ -377,8 +393,8 @@
     overflow: hidden;
     background-color: #F9F9F9;
     border: 1px solid transparent;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     
     transition: all 0.3s ease-in-out;
 }
@@ -435,16 +451,16 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: #F9F9F9;
     border: 1px solid #d7d7d7;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 5px 10px;
     cursor: pointer;
 }
 
 .booking-modal-time-head > h3 {
-    font-size: 15px;
+    font-size: 13px;
     line-height: 1.2;
     font-weight: 500;
     color: #000;
@@ -458,16 +474,26 @@
     height: auto;
 }
 
-.booking-modal-availability-check-button > button {
+.booking-modal-check-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: max-content;
+    width: 100%;
     padding: 10px 20px;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     background-color: var(--primary-color);
     color: var(--color-white);
     cursor: pointer;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size: 15px;
+    line-height: 1.2;
+    font-weight: 500;
+    opacity: 0.5;
+}
+
+.booking-modal-check-button.active-check-button {
+    opacity: 1;
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1280px) {
